CHANGELOG for Fall of Eden
--------------------------

--------------------------------------------
                  CURRENT
--------------------------------------------

Version 0.5.2
-------------
* Fixed bug in Abilities (would show if you tried to Heal out of combat, and then pressed "Back").
* Fixed bug in default pregnancy trigger handler.

--------------------------------------------
             PREVIOUS VERSIONS
--------------------------------------------

Version 0.5.1
-------------
* Correctly bundled fonts.
* Fixed a bug in one of Cale's scenes.
* Fixed Fera being bugged.
* Fixed Miranda first date bug.

Version 0.5.0
-------------
* Fixed numerous typos.
* Fixed a few Cavalcade parser errors.
* Changed common measurement unit to imperial (inches, feet, yards) for consistency.
 - Adjusted a bunch of NPC cock sizes to account for this. Holler if you find discrepancies or size evaluations that doesn't make sense!
* Becoming a herm in the intro now starts you with a seven inch cock (bigger than before).
* Added a slew of new cock size adjectives (and reduced their prevalence in scenes). The descriptors should be slightly less repetitive now.
* Added a review/redo option to character creation in the intro.
* Renamed FemmeBoy body type to Trap.
* Added a Voluptuous option for female start.
* Using cheats to get items in the tent now gives 10 of every item instead of 1.
* Fixed a bug in Alchemy that would cause brewing to consume 2x the amount of ingredients actually required.
* At the end of combat, loot is now combined if you receive multiple instances of the same type of item.
* Combat output has been streamlined. There should be less button mashing to get to the next combat choice now. This doesn't change any of the mechanics, just how combat is displayed.
 - When picking a spell, the battle screen now shows what spell you picked when you choose a target.